--- a/source/form.html
+++ b/source/form.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
   <title>Подбор программы | HTML Academy: Кэт энерджи</title>
+
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="body">
 <header class="header">
   <div class="header__logo">
-    <img class="header__logo-img" src="img/logo-mobile.svg" width="34" height="37" alt="Кэт энерджи">
+    <a href="index.html" class="header__logo-link">
+      <img class="header__logo-img" src="img/logo-mobile.svg" width="34" height="37" alt="Кэт энерджи">
+    </a>
   </div>
   <div class="header__slogan">
     <img class="header__logo-img " src="img/slogan.svg" width="101" height="18" alt="Кэт энерджи">
@@ -16,18 +21,24 @@
     <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     <ul class="nav__menu">
       <li class="nav__menu-item">
-        <span>
-          Главная
-        </span>
-      </li>
-      <li class="nav__menu-item">
-        <a href="catalog.html">
-          каталог продукции
+        <a href="index.html" class="nav__menu-item-link">
+          <span class="nav__menu-item-text">
+            Главная
+          </span>
         </a>
       </li>
       <li class="nav__menu-item nav__menu-item--active">
-        <a href="form.html">
-          подбор программы
+        <a href="catalog.html" class="nav__menu-item-link">
+          <span class="nav__menu-item-text">
+            каталог продукции
+          </span>
+        </a>
+      </li>
+      <li class="nav__menu-item">
+        <a href="form.html" class="nav__menu-item-link">
+          <span class="nav__menu-item-text">
+            подбор программы
+          </span>
         </a>
       </li>
     </ul>
@@ -39,44 +50,44 @@
       <h2 class="request__title">Подбор программы</h2>
       <div class="request__subtitle">Заполните анкету, и мы подберем программу питания для вашего кота</div>
       <form class="request__form" action="https://echo.htmlacademy.ru/" method="post">
-        <fieldset class="request__form-fieldset">
+        <fieldset class="request__form-fieldset request__form-fieldset--cat-data">
           <div class="request__form-group">
             <label class="request__form-label" for="name">ИМЯ:*</label>
             <input class="request__form-field" type="text" id="name" name="name" placeholder="барсик" required>
           </div>
           <div class="request__form-group">
             <label class="request__form-label" for="weight">Вес (кг):*</label>
-            <input class="request__form" type="number" id="weight" name="weight" placeholder="7" required>
+            <input class="request__form-field" type="number" id="weight" name="weight" placeholder="7" required>
           </div>
           <div class="request__form-group">
             <label class="request__form-label" for="age">Возраст (лет):</label>
-            <input class="request__form" type="number" id="age" name="age" placeholder="7" required>
+            <input class="request__form-field" type="number" id="age" name="age" placeholder="7" required>
           </div>
         </fieldset>
-        <fieldset class="request__form-fieldset">
+        <fieldset class="request__form-fieldset request__form-fieldset--course-type">
           <ul class="request__form-purpose">
             <li class="request__form-purpose-item">
               <label class="request__form-purpose-control">
                 <input class="request__form-purpose-input" type="radio" name="purpose" value="weight-loss" checked>
-                <span class="control__label">похудение</span>
+                <span class="request__form-purpose-label">похудение</span>
               </label>
             </li>
             <li class="request__form-purpose-item">
               <label class="request__form-purpose-control">
                 <input class="request__form-purpose-input" type="radio" name="purpose" value="mass-gain">
-                <span class="control__label">Набор массы</span>
+                <span class="request__form-purpose-label">Набор массы</span>
               </label>
             </li>
             <li class="request__form-purpose-item">
               <label class="request__form-purpose-control">
                 <input class="request__form-purpose-input" type="radio" name="purpose" value="help">
-                <span class="control__label">Не знаю (Нужен ваш совет)</span>
+                <span class="request__form-purpose-label">Не знаю (Нужен ваш совет)</span>
               </label>
             </li>
           </ul>
         </fieldset>
-        <fieldset class="request__form-fieldset">
-          <div class="request__form-title">Контактные данные (владельца кота)</div>
+        <fieldset class="request__form-fieldset request__form-fieldset--contacts">
+          <div class="request__form-title request__form-title--contacts">Контактные данные (владельца кота)</div>
           <div class="request__form-group">
             <label class="request__form-label" for="email">Email:*</label>
             <input class="request__form-field" type="email" id="email" name="email" placeholder="kuklachev@gmail.com" required>
@@ -86,23 +97,22 @@
             <input class="request__form-field" type="tel" id="phone" name="phone" placeholder="8 (960) 900-60-90" required>
           </div>
         </fieldset>
-        <fieldset class="request__form-fieldset">
-          <div class="request__form-title">Комментарий</div>
+        <fieldset class="request__form-fieldset request__form-fieldset--comment">
+          <div class="request__form-title request__form-title--comment">Комментарий</div>
           <div class="request__form-group">
             <label>
-              <textarea class="form__field form__field--textarea" name="message" placeholder="Расскажите обо всех повадках кота">
+              <textarea class="request__form-field request__form-field--textarea" name="message" placeholder="Расскажите обо всех повадках кота">
               </textarea>
             </label>
           </div>
         </fieldset>
-        <fieldset class="request__form-fieldset">
-          <div class="request__form-title">Дополнительно</div>
+        <fieldset class="request__form-fieldset request__form-fieldset--extra">
+          <div class="request__form-title request__form-title--extra">Дополнительно</div>
           <ul class="request__form-additional">
             <li class="request__form-additional-item">
               <label class="form__control control">
                 <input class="visually-hidden control__input" type="checkbox" name="sweetener" value="sweetener" checked>
-                <span class="control__mark"></span>
-                <span class="control__label">сахарозаменитель</span>
+                <span class="request__form-additional-label">сахарозаменитель</span>
               </label>
             </li>
             <li class="request__form-additional-item">
@@ -143,7 +153,9 @@
 </main>
 <footer class="footer">
   <div class="footer__logo">
-    <img class="footer__logo-img" src="img/footer-logo.svg" width="128" height="24" alt="Cat Energy">
+    <a href="index.html" class="footer__logo-link">
+      <img class="footer__logo-img" src="img/footer-logo.svg" width="128" height="24" alt="Cat Energy">
+    </a>
   </div>
   <div class="footer__social">
     <ul class="footer__social-list">
