--- a/source/index.html
+++ b/source/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
+
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="body">
 <header class="header">
   <div class="header__logo">
-    <img class="header__logo-img" src="img/logo-mobile.svg" width="34" height="37" alt="Кэт энерджи">
+    <a href="index.html" class="header__logo-link">
+      <img class="header__logo-img" src="img/logo-mobile.svg" width="34" height="37" alt="Кэт энерджи">
+    </a>
   </div>
   <div class="header__slogan">
     <img class="header__logo-img " src="img/slogan.svg" width="101" height="18" alt="Кэт энерджи">
@@ -16,18 +21,24 @@
     <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     <ul class="nav__menu">
       <li class="nav__menu-item nav__menu-item--active">
-        <span>
-          Главная
-        </span>
-      </li>
-      <li class="nav__menu-item">
-        <a href="catalog.html">
-          каталог продукции
+        <a href="index.html" class="nav__menu-item-link">
+          <span class="nav__menu-item-text">
+            Главная
+          </span>
         </a>
       </li>
       <li class="nav__menu-item">
-        <a href="form.html">
-          подбор программы
+        <a href="catalog.html" class="nav__menu-item-link">
+          <span class="nav__menu-item-text">
+            каталог продукции
+          </span>
+        </a>
+      </li>
+      <li class="nav__menu-item">
+        <a href="form.html" class="nav__menu-item-link">
+          <span class="nav__menu-item-text">
+            подбор программы
+          </span>
         </a>
       </li>
     </ul>
@@ -105,8 +116,8 @@
         <span class="example__properties-subtitle">затрачено времени</span>
       </div>
       <div class="example__properties-item example__properties-item--result">
-        <span class="example__properties-title">15 000 РУБ.</span>
         <span class="example__properties-subtitle">Затраты на питание: </span>
+        <span class="example__properties-title">15 000 РУБ.</span>
       </div>
     </div>
     <div class="example__interactive">
@@ -134,7 +145,9 @@
 </main>
 <footer class="footer">
   <div class="footer__logo">
-    <img class="footer__logo-img" src="img/footer-logo.svg" width="128" height="24" alt="Cat Energy">
+    <a href="index.html" class="footer__logo-link">
+      <img class="footer__logo-img" src="img/footer-logo.svg" width="128" height="24" alt="Cat Energy">
+    </a>
   </div>
   <div class="footer__social">
     <ul class="footer__social-list">
