Добавление адаптивной сетки всех страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,10 +12,8 @@
   <div class="header__logo">
     <a href="index.html" class="header__logo-link">
       <img class="header__logo-img" src="img/logo-mobile.svg" width="34" height="37" alt="Кэт энерджи">
+      <img class="header__logo-img " src="img/slogan.svg" width="101" height="18" alt="Кэт энерджи">
     </a>
-  </div>
-  <div class="header__slogan">
-    <img class="header__logo-img " src="img/slogan.svg" width="101" height="18" alt="Кэт энерджи">
   </div>
   <nav class="nav">
     <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -50,150 +48,178 @@
       <h1 class="catalog__title">Каталог продукции</h1>
       <ul class="catalog__list">
         <li class="catalog__item">
-          <a class="catalog__item-info" href="catalog.html/#1">
-            <img class="catalog__item-img" src="img/catalog-1-mobile.png" alt="Cat Energy PRO 500 г Курица">
-            <h3 class="catalog__item-title">Cat Energy PRO 500 г</h3>
-          </a>
-          <ul class="catalog__properties">
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Масса</span>
-              <span class="catalog__properties-subtitle">500 г</span>
-            </li>
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Вкус</span>
-              <span class="catalog__properties-subtitle">Курица</span>
-            </li>
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Цена</span>
-              <span class="catalog__properties-subtitle">700 ₽</span>
-            </li>
-          </ul>
+          <div class="catalog__item-cont">
+            <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#1">
+              <img class="catalog__item-img" src="img/catalog-1-mobile.png" alt="Cat Energy PRO 500 г Курица">
+            </a>
+            <a class="catalog__item-link" href="catalog.html/#1">
+              <h3 class="catalog__item-title">Cat Energy PRO 500 г</h3>
+            </a>
+            <ul class="catalog__properties">
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Масса</span>
+                <span class="catalog__properties-subtitle">500 г</span>
+              </li>
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Вкус</span>
+                <span class="catalog__properties-subtitle">Курица</span>
+              </li>
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Цена</span>
+                <span class="catalog__properties-subtitle">700 ₽</span>
+              </li>
+            </ul>
+          </div>
           <a class="catalog__item-btn" href="form.html">заказать</a>
         </li>
         <li class="catalog__item">
-          <a class="catalog__item-info" href="catalog.html/#2">
-            <img class="catalog__item-img" src="img/catalog-2-mobile.png" alt="Cat Energy PRO 1000 г Курица">
-            <h3 class="catalog__item-title">Cat Energy PRO 1000 г</h3>
-          </a>
-          <ul class="catalog__properties">
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Масса</span>
-              <span class="catalog__properties-subtitle">1000 г</span>
-            </li>
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Вкус</span>
-              <span class="catalog__properties-subtitle">Курица</span>
-            </li>
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Цена</span>
-              <span class="catalog__properties-subtitle">1000 ₽</span>
-            </li>
-          </ul>
+          <div class="catalog__item-cont">
+            <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#2">
+              <img class="catalog__item-img" src="img/catalog-2-mobile.png" alt="Cat Energy PRO 1000 г Курица">
+            </a>
+            <a class="catalog__item-link" href="catalog.html/#2">
+              <h3 class="catalog__item-title">Cat Energy PRO 1000 г</h3>
+            </a>
+            <ul class="catalog__properties">
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Масса</span>
+                <span class="catalog__properties-subtitle">1000 г</span>
+              </li>
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Вкус</span>
+                <span class="catalog__properties-subtitle">Курица</span>
+              </li>
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Цена</span>
+                <span class="catalog__properties-subtitle">1000 ₽</span>
+              </li>
+            </ul>
+          </div>
           <a class="catalog__item-btn" href="form.html">заказать</a>
         </li>
         <li class="catalog__item">
-          <a class="catalog__item-info" href="catalog.html/#3">
-            <img class="catalog__item-img" src="img/catalog-3-mobile.png" alt="Cat Energy PRO 500 г Рыба">
-            <h3 class="catalog__item-title">Cat Energy PRO 500 г</h3>
-          </a>
-          <ul class="catalog__properties">
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Масса</span>
-              <span class="catalog__properties-subtitle">500 г</span>
-            </li>
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Вкус</span>
-              <span class="catalog__properties-subtitle">Рыба</span>
-            </li>
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Цена</span>
-              <span class="catalog__properties-subtitle">700 ₽</span>
-            </li>
-          </ul>
+          <div class="catalog__item-cont">
+            <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#3">
+              <img class="catalog__item-img" src="img/catalog-3-mobile.png" alt="Cat Energy PRO 500 г Рыба">
+            </a>
+            <a class="catalog__item-link" href="catalog.html/#3">
+              <h3 class="catalog__item-title">Cat Energy PRO 500 г</h3>
+            </a>
+            <ul class="catalog__properties">
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Масса</span>
+                <span class="catalog__properties-subtitle">500 г</span>
+              </li>
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Вкус</span>
+                <span class="catalog__properties-subtitle">Рыба</span>
+              </li>
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Цена</span>
+                <span class="catalog__properties-subtitle">700 ₽</span>
+              </li>
+            </ul>
+          </div>
           <a class="catalog__item-btn" href="form.html">заказать</a>
         </li>
         <li class="catalog__item">
-          <a class="catalog__item-info" href="catalog.html/#4">
-            <img class="catalog__item-img" src="img/catalog-4-mobile.png" alt="Cat Energy PRO 1000 г Рыба">
-            <h3 class="catalog__item-title">Cat Energy PRO 1000 г</h3>
-          </a>
-          <ul class="catalog__properties">
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Масса</span>
-              <span class="catalog__properties-subtitle">1000 г</span>
-            </li>
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Вкус</span>
-              <span class="catalog__properties-subtitle">Рыба</span>
-            </li>
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Цена</span>
-              <span class="catalog__properties-subtitle">1000 ₽</span>
-            </li>
-          </ul>
+          <div class="catalog__item-cont">
+            <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#4">
+              <img class="catalog__item-img" src="img/catalog-4-mobile.png" alt="Cat Energy PRO 1000 г Рыба">
+            </a>
+            <a class="catalog__item-link" href="catalog.html/#4">
+              <h3 class="catalog__item-title">Cat Energy PRO 1000 г</h3>
+            </a>
+            <ul class="catalog__properties">
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Масса</span>
+                <span class="catalog__properties-subtitle">1000 г</span>
+              </li>
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Вкус</span>
+                <span class="catalog__properties-subtitle">Рыба</span>
+              </li>
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Цена</span>
+                <span class="catalog__properties-subtitle">1000 ₽</span>
+              </li>
+            </ul>
+          </div>
           <a class="catalog__item-btn" href="form.html">заказать</a>
         </li>
         <li class="catalog__item">
-          <a class="catalog__item-info" href="catalog.html/#5">
-            <img class="catalog__item-img" src="img/catalog-5-mobile.png" alt="Cat Energy Slim 500 г Гречка">
-            <h3 class="catalog__item-title">Cat Energy Slim 500 г</h3>
-          </a>
-          <ul class="catalog__properties">
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-item-title">Масса</span>
-              <span class="catalog__properties-item-subtitle">500 г</span>
-            </li>
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-item-title">Вкус</span>
-              <span class="catalog__properties-item-subtitle">Гречка</span>
-            </li>
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-item-title">Цена</span>
-              <span class="catalog__properties-item-subtitle">400 ₽</span>
-            </li>
-          </ul>
+          <div class="catalog__item-cont">
+            <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#5">
+              <img class="catalog__item-img" src="img/catalog-5-mobile.png" alt="Cat Energy Slim 500 г Гречка">
+            </a>
+            <a class="catalog__item-link" href="catalog.html/#5">
+              <h3 class="catalog__item-title">Cat Energy Slim 500 г</h3>
+            </a>
+            <ul class="catalog__properties">
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-item-title">Масса</span>
+                <span class="catalog__properties-item-subtitle">500 г</span>
+              </li>
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-item-title">Вкус</span>
+                <span class="catalog__properties-item-subtitle">Гречка</span>
+              </li>
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-item-title">Цена</span>
+                <span class="catalog__properties-item-subtitle">400 ₽</span>
+              </li>
+            </ul>
+          </div>
           <a class="catalog__item-btn" href="form.html">заказать</a>
         </li>
         <li class="catalog__item">
-          <a class="catalog__item-info" href="catalog.html/#6">
-            <img class="catalog__item-img" src="img/catalog-6-mobile.png" alt="Cat Energy Slim 1000 г Гречка">
-            <h3 class="catalog__item-title">Cat Energy Slim 1000 г</h3>
-          </a>
-          <ul class="catalog__properties">
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Масса</span>
-              <span class="catalog__properties-subtitle">1000 г</span>
-            </li>
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Вкус</span>
-              <span class="catalog__properties-subtitle">Гречка</span>
-            </li>
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Цена</span>
-              <span class="catalog__properties-subtitle">700 ₽</span>
-            </li>
-          </ul>
+          <div class="catalog__item-cont">
+            <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#6">
+              <img class="catalog__item-img" src="img/catalog-6-mobile.png" alt="Cat Energy Slim 1000 г Гречка">
+            </a>
+            <a class="catalog__item-link" href="catalog.html/#6">
+              <h3 class="catalog__item-title">Cat Energy Slim 1000 г</h3>
+            </a>
+            <ul class="catalog__properties">
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Масса</span>
+                <span class="catalog__properties-subtitle">1000 г</span>
+              </li>
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Вкус</span>
+                <span class="catalog__properties-subtitle">Гречка</span>
+              </li>
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Цена</span>
+                <span class="catalog__properties-subtitle">700 ₽</span>
+              </li>
+            </ul>
+          </div>
           <a class="catalog__item-btn" href="form.html">заказать</a>
         </li>
         <li class="catalog__item">
-          <a class="catalog__item-info" href="catalog.html/#7">
-            <img class="catalog__item-img" src="img/catalog-7-mobile.png" alt="Cat Energy Slim 500 г Рис">
-            <h3 class="catalog__item-title">Cat Energy Slim 500 г</h3>
-          </a>
-          <ul class="catalog__properties">
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Масса</span>
-              <span class="catalog__properties-subtitle">500 г</span>
-            </li>
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Вкус</span>
-              <span class="catalog__properties-subtitle">Рис</span>
-            </li>
-            <li class="catalog__properties-item">
-              <span class="catalog__properties-title">Цена</span>
-              <span class="catalog__properties-subtitle">500 ₽</span>
-            </li>
-          </ul>
+          <div class="catalog__item-cont">
+            <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#7">
+              <img class="catalog__item-img" src="img/catalog-7-mobile.png" alt="Cat Energy Slim 500 г Рис">
+            </a>
+            <a class="catalog__item-link" href="catalog.html/#7">
+              <h3 class="catalog__item-title">Cat Energy Slim 500 г</h3>
+            </a>
+            <ul class="catalog__properties">
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Масса</span>
+                <span class="catalog__properties-subtitle">500 г</span>
+              </li>
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Вкус</span>
+                <span class="catalog__properties-subtitle">Рис</span>
+              </li>
+              <li class="catalog__properties-item">
+                <span class="catalog__properties-title">Цена</span>
+                <span class="catalog__properties-subtitle">500 ₽</span>
+              </li>
+            </ul>
+          </div>
           <a class="catalog__item-btn" href="form.html">заказать</a>
         </li>
         <li class="catalog__item catalog__item--more">
@@ -205,8 +231,8 @@
     </div>
   </section>
   <section class="additional">
+    <h2 class="additional__title">Дополнительные товары</h2>
     <div class="additional__container">
-      <h2 class="additional__title">Дополнительные товары</h2>
       <ul class="additional__products">
         <li class="additional__products-item">
           <div class="additional__products-item-title">Сахарозаменитель</div>
@@ -255,6 +281,7 @@
         ул. Большая Конюшенная, д. 19/8<br> Санкт-Петербург
       </address>
     </div>
+    <div class="map__frame"></div>
   </section>
 </main>
 <footer class="footer">
