--- a/source/index.html
+++ b/source/index.html
@@ -12,10 +12,8 @@
   <div class="header__logo">
     <a href="index.html" class="header__logo-link">
       <img class="header__logo-img" src="img/logo-mobile.svg" width="34" height="37" alt="Кэт энерджи">
+      <img class="header__logo-img " src="img/slogan.svg" width="101" height="18" alt="Кэт энерджи">
     </a>
-  </div>
-  <div class="header__slogan">
-    <img class="header__logo-img " src="img/slogan.svg" width="101" height="18" alt="Кэт энерджи">
   </div>
   <nav class="nav">
     <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -64,10 +62,10 @@
         <a class="functions__item-btn" href="catalog.html/#slim">каталог slim</a>
       </div>
       <div class="functions__item">
-        <h3 class="functions__item-title">похудение</h3>
-        <p class="functions__item-description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
-          диету!
-          Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+        <h3 class="functions__item-title">набор массы</h3>
+        <p class="functions__item-description">Заработать авторитет среди дворовых котов и даже собак?
+          Серия Cat Energy Pro поможет вашему коту нарастить
+          необходимые мышцы!</p>
         <a class="functions__item-btn" href="catalog.html/#pro">каталог pro</a>
       </div>
     </div>
@@ -102,22 +100,23 @@
     </ul>
   </section>
   <section class="example">
-    <h2 class="example__title">Живой пример</h2>
-    <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
-      Отличный результат без
-      изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
-    <div class="example__properties">
-      <div class="example__properties-item">
-        <span class="example__properties-title">5 КГ</span>
-        <span class="example__properties-subtitle">снижение веса</span>
-      </div>
-      <div class="example__properties-item">
-        <span class="example__properties-title">60 ДНЕЙ</span>
-        <span class="example__properties-subtitle">затрачено времени</span>
-      </div>
-      <div class="example__properties-item example__properties-item--result">
-        <span class="example__properties-subtitle">Затраты на питание: </span>
-        <span class="example__properties-title">15 000 РУБ.</span>
+    <div class="example__cont">
+      <h2 class="example__title">Живой пример</h2>
+      <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+        Отличный результат без
+        изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
+      <div class="example__inner">
+        <div class="example__properties">
+          <div class="example__properties-item">
+            <span class="example__properties-title">5 КГ</span>
+            <span class="example__properties-subtitle">снижение веса</span>
+          </div>
+          <div class="example__properties-item">
+            <span class="example__properties-title">60 ДНЕЙ</span>
+            <span class="example__properties-subtitle">затрачено времени</span>
+          </div>
+        </div>
+        <p class="example__inner-subheading">Затраты на питание: 15 000 руб.</p>
       </div>
     </div>
     <div class="example__interactive">
@@ -141,6 +140,7 @@
         ул. Большая Конюшенная, д. 19/8<br> Санкт-Петербург
       </address>
     </div>
+    <div class="map__frame"></div>
   </section>
 </main>
 <footer class="footer">
