--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,8 +3,11 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/apple-icon-180x180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <title>Каталог | HTML Academy: Кэт энерджи</title>
-
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="body">
@@ -12,7 +15,11 @@
   <div class="header__container container">
     <div class="header__logo">
       <a href="index.html" class="header__logo-link">
-        <img class="header__logo-img" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="header__logo-img" src="img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
+        </picture>
       </a>
     </div>
     <nav class="nav nav--nojs">
@@ -51,7 +58,13 @@
         <li class="catalog__item">
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#1">
-              <img class="catalog__item-img" src="img/catalog/product-1-mobile.png" alt="Cat Energy PRO 500 г Курица">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/catalog/product-1-desktop-1x.png 1x,
+                  img/catalog/product-1-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/catalog/product-1-tablet-1x.png 1x,
+                  img/catalog/product-1-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-1-mobile-1x.png" srcset="img/catalog/product-1-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 500 г Курица">
+              </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#1">
               <h3 class="catalog__item-title">Cat Energy PRO 500 г</h3>
@@ -76,7 +89,13 @@
         <li class="catalog__item">
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#2">
-              <img class="catalog__item-img" src="img/catalog/product-2-mobile.png" alt="Cat Energy PRO 1000 г Курица">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/catalog/product-2-desktop-1x.png 1x,
+                  img/catalog/product-2-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/catalog/product-2-tablet-1x.png 1x,
+                  img/catalog/product-2-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-2-mobile-1x.png" srcset="img/catalog/product-2-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 1000 г Курица">
+              </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#2">
               <h3 class="catalog__item-title">Cat Energy PRO 1000 г</h3>
@@ -101,7 +120,13 @@
         <li class="catalog__item">
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#3">
-              <img class="catalog__item-img" src="img/catalog/product-3-mobile.png" alt="Cat Energy PRO 500 г Рыба">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/catalog/product-3-desktop-1x.png 1x,
+                  img/catalog/product-3-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/catalog/product-3-tablet-1x.png 1x,
+                  img/catalog/product-3-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-3-mobile-1x.png" srcset="img/catalog/product-3-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 500 г Рыба">
+              </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#3">
               <h3 class="catalog__item-title">Cat Energy PRO 500 г</h3>
@@ -126,7 +151,13 @@
         <li class="catalog__item">
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#4">
-              <img class="catalog__item-img" src="img/catalog/product-4-mobile.png" alt="Cat Energy PRO 1000 г Рыба">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/catalog/product-4-desktop-1x.png 1x,
+                  img/catalog/product-4-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/catalog/product-4-tablet-1x.png 1x,
+                  img/catalog/product-4-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-4-mobile-1x.png" srcset="img/catalog/product-4-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 1000 г Рыба">
+              </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#4">
               <h3 class="catalog__item-title">Cat Energy PRO 1000 г</h3>
@@ -151,7 +182,13 @@
         <li class="catalog__item">
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#5">
-              <img class="catalog__item-img" src="img/catalog/product-5-mobile.png" alt="Cat Energy Slim 500 г Гречка">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/catalog/product-5-desktop-1x.png 1x,
+                img/catalog/product-5-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/catalog/product-5-tablet-1x.png 1x,
+                img/catalog/product-5-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-5-mobile-1x.png" srcset="img/catalog/product-5-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 500 г Гречка">
+              </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#5">
               <h3 class="catalog__item-title">Cat Energy Slim 500 г</h3>
@@ -176,7 +213,13 @@
         <li class="catalog__item">
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#6">
-              <img class="catalog__item-img" src="img/catalog/product-6-mobile.png" alt="Cat Energy Slim 1000 г Гречка">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/catalog/product-6-desktop-1x.png 1x,
+                img/catalog/product-6-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/catalog/product-6-tablet-1x.png 1x,
+                img/catalog/product-6-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-6-mobile-1x.png" srcset="img/catalog/product-6-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 1000 г Гречка">
+              </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#6">
               <h3 class="catalog__item-title">Cat Energy Slim 1000 г</h3>
@@ -201,7 +244,13 @@
         <li class="catalog__item">
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#7">
-              <img class="catalog__item-img" src="img/catalog/product-7-mobile.png" alt="Cat Energy Slim 500 г Рис">
+              <picture>
+                <source media="(min-width: 1440px)" srcset="img/catalog/product-7-desktop-1x.png 1x,
+                img/catalog/product-7-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="img/catalog/product-7-tablet-1x.png 1x,
+                img/catalog/product-7-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-7-mobile-1x.png" srcset="img/catalog/product-7-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 500 г Рис">
+              </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#7">
               <h3 class="catalog__item-title">Cat Energy Slim 500 г</h3>
