--- a/source/form.html
+++ b/source/form.html
@@ -3,8 +3,11 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/apple-icon-180x180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <title>Подбор программы | HTML Academy: Кэт энерджи</title>
-
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="body">
@@ -12,7 +15,11 @@
   <div class="header__container container">
     <div class="header__logo">
       <a href="index.html" class="header__logo-link">
-        <img class="header__logo-img" src="img/logo-mobile.svg" width="191" height="38" alt="Кэт энерджи">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="header__logo-img" src="img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
+        </picture>
       </a>
     </div>
     <nav class="nav nav--nojs">
