--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,12 +3,12 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
-  <link rel="icon" href="favicon.ico">
-  <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="img/favicons/apple-icon-180x180.png">
-  <link rel="manifest" href="manifest.webmanifest">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/img/favicons/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/img/favicons/apple-icon-180x180.png">
+  <link rel="manifest" href="/manifest.webmanifest">
   <title>Каталог | HTML Academy: Кэт энерджи</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="body">
 <header class="header">
@@ -16,9 +16,9 @@
     <div class="header__logo">
       <a href="index.html" class="header__logo-link">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg">
-          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-          <img class="header__logo-img" src="img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
+          <source media="(min-width: 1440px)" srcset="/img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="/img/logo-tablet.svg">
+          <img class="header__logo-img" src="/img/logo-mobile.svg" width="191" height="38" alt="Логотип Cat Energy">
         </picture>
       </a>
     </div>
@@ -59,11 +59,11 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#1">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/catalog/product-1-desktop-1x.png 1x,
-                  img/catalog/product-1-desktop-2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/catalog/product-1-tablet-1x.png 1x,
-                  img/catalog/product-1-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="img/catalog/product-1-mobile-1x.png" srcset="img/catalog/product-1-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 500 г Курица">
+                <source media="(min-width: 1440px)" srcset="/img/catalog/product-1-desktop-1x.png 1x,
+                  /img/catalog/product-1-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="/img/catalog/product-1-tablet-1x.png 1x,
+                  /img/catalog/product-1-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="/img/catalog/product-1-mobile-1x.png" srcset="/img/catalog/product-1-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 500 г Курица">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#1">
@@ -90,11 +90,11 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#2">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/catalog/product-2-desktop-1x.png 1x,
-                  img/catalog/product-2-desktop-2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/catalog/product-2-tablet-1x.png 1x,
-                  img/catalog/product-2-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="img/catalog/product-2-mobile-1x.png" srcset="img/catalog/product-2-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 1000 г Курица">
+                <source media="(min-width: 1440px)" srcset="/img/catalog/product-2-desktop-1x.png 1x,
+                  /img/catalog/product-2-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="/img/catalog/product-2-tablet-1x.png 1x,
+                  /img/catalog/product-2-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="/img/catalog/product-2-mobile-1x.png" srcset="/img/catalog/product-2-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 1000 г Курица">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#2">
@@ -121,11 +121,11 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#3">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/catalog/product-3-desktop-1x.png 1x,
-                  img/catalog/product-3-desktop-2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/catalog/product-3-tablet-1x.png 1x,
-                  img/catalog/product-3-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="img/catalog/product-3-mobile-1x.png" srcset="img/catalog/product-3-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 500 г Рыба">
+                <source media="(min-width: 1440px)" srcset="/img/catalog/product-3-desktop-1x.png 1x,
+                  /img/catalog/product-3-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="/img/catalog/product-3-tablet-1x.png 1x,
+                  /img/catalog/product-3-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="img/catalog/product-3-mobile-1x.png" srcset="/img/catalog/product-3-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 500 г Рыба">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#3">
@@ -152,11 +152,11 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#4">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/catalog/product-4-desktop-1x.png 1x,
-                  img/catalog/product-4-desktop-2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/catalog/product-4-tablet-1x.png 1x,
-                  img/catalog/product-4-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="img/catalog/product-4-mobile-1x.png" srcset="img/catalog/product-4-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 1000 г Рыба">
+                <source media="(min-width: 1440px)" srcset="/img/catalog/product-4-desktop-1x.png 1x,
+                  /img/catalog/product-4-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="/img/catalog/product-4-tablet-1x.png 1x,
+                  /img/catalog/product-4-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="/img/catalog/product-4-mobile-1x.png" srcset="/img/catalog/product-4-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy PRO 1000 г Рыба">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#4">
@@ -183,11 +183,11 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#5">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/catalog/product-5-desktop-1x.png 1x,
-                img/catalog/product-5-desktop-2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/catalog/product-5-tablet-1x.png 1x,
-                img/catalog/product-5-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="img/catalog/product-5-mobile-1x.png" srcset="img/catalog/product-5-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 500 г Гречка">
+                <source media="(min-width: 1440px)" srcset="/img/catalog/product-5-desktop-1x.png 1x,
+                /img/catalog/product-5-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="/img/catalog/product-5-tablet-1x.png 1x,
+                /img/catalog/product-5-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="/img/catalog/product-5-mobile-1x.png" srcset="/img/catalog/product-5-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 500 г Гречка">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#5">
@@ -214,11 +214,11 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#6">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/catalog/product-6-desktop-1x.png 1x,
-                img/catalog/product-6-desktop-2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/catalog/product-6-tablet-1x.png 1x,
-                img/catalog/product-6-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="img/catalog/product-6-mobile-1x.png" srcset="img/catalog/product-6-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 1000 г Гречка">
+                <source media="(min-width: 1440px)" srcset="/img/catalog/product-6-desktop-1x.png 1x,
+                /img/catalog/product-6-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="/img/catalog/product-6-tablet-1x.png 1x,
+                /img/catalog/product-6-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="/img/catalog/product-6-mobile-1x.png" srcset="/img/catalog/product-6-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 1000 г Гречка">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#6">
@@ -245,11 +245,11 @@
           <div class="catalog__item-cont">
             <a class="catalog__item-link catalog__item-link--img" href="catalog.html/#7">
               <picture>
-                <source media="(min-width: 1440px)" srcset="img/catalog/product-7-desktop-1x.png 1x,
-                img/catalog/product-7-desktop-2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/catalog/product-7-tablet-1x.png 1x,
-                img/catalog/product-7-tablet-2x.png 2x">
-                <img class="catalog__item-img" src="img/catalog/product-7-mobile-1x.png" srcset="img/catalog/product-7-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 500 г Рис">
+                <source media="(min-width: 1440px)" srcset="/img/catalog/product-7-desktop-1x.png 1x,
+                /img/catalog/product-7-desktop-2x.png 2x">
+                <source media="(min-width: 768px)" srcset="/img/catalog/product-7-tablet-1x.png 1x,
+                /img/catalog/product-7-tablet-2x.png 2x">
+                <img class="catalog__item-img" src="/img/catalog/product-7-mobile-1x.png" srcset="/img/catalog/product-7-mobile-2x.png 2x" width="140" height="112" alt="Cat Energy Slim 500 г Рис">
               </picture>
             </a>
             <a class="catalog__item-link" href="catalog.html/#7">
@@ -414,6 +414,6 @@
     </div>
   </div>
 </footer>
-<script src="js/script.js"></script>
+<script src="/js/script.js"></script>
 </body>
 </html>
